--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "php-curl-class/php-curl-class": "^4.11",
         "symfony/var-dumper": "^3.0",
         "codeguy/upload": "^1.3",
-        "picqer/php-barcode-generator": "^0.2.2"
+        "picqer/php-barcode-generator": "^0.2.2",
+        "endroid/qr-code": "^3.9"
     },
     "autoload": {
         "psr-4": { "": "src/" }
